--- a/telefono 4/css/css.css
+++ b/telefono 4/css/css.css
@@ -2,11 +2,12 @@
     margin: 0;
     padding: 0;
 }
+html{
+    font-size: 10px; 
+}
 section{
   
     margin: auto;
-    
-    font-size: 10px;    
     
 }
 .todo{
@@ -19,8 +20,8 @@ section{
 .todo div{
     margin: 30px; 
     border-radius: 55px;
-    width: 31em;
-    height: 30em;
+    width: 31rem;
+    height: 30rem;
     
 }
 .cuadro{
@@ -42,8 +43,8 @@ section{
 .div_circulo{
     font-size: 10px;
     
-    width: 13em;
-    height: 13em;
+    width: 13rem;
+    height: 13rem;
     margin-top: 39px;
     border-radius: 50%;
     background: #001935;
